--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.5.1"
+  },
+  "dependencies": {
+    "jquery": "^2.1.4",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   }
 }
