--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "babel-eslint": "^4.1.3",
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "^0.1.0",
-    "eslint-plugin-react": "^3.5.1"
+    "eslint-plugin-react": "^3.5.1",
+    "react": "^0.14.0"
   },
   "dependencies": {
     "jquery": "^2.1.4",
