--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ExpFront/Learning-React#readme",
   "devDependencies": {
     "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.3.2",
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.5.1",
